--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,19 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
 
 # testing
 /coverage
 
 # production
-# /build
+/build
+
+# IDE
+.idea
+.vscode
 
 # misc
 .DS_Store
