--- a/package.json
+++ b/package.json
@@ -1,48 +1,53 @@
 {
-  "name": "react-cli",
-  "version": "0.1.0",
+  "name": "cnode-react",
+  "version": "2.0.0",
+  "description": "create react app v2.x.x",
+  "author": "jekorx",
   "private": true,
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "antd-mobile": "^2.2.3",
-    "github-markdown-css": "^2.10.0",
-    "mobx": "^4.3.1",
-    "mobx-react": "^5.2.5",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "antd-mobile": "^2.2.9",
+    "github-markdown-css": "^3.0.1",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
-    "babel-plugin-import": "^1.8.0",
-    "caniuse-lite": "^1.0.30000697",
-    "cssnano": "^3.10.0",
-    "cssnano-preset-advanced": "^4.0.0",
-    "eslint": "^5.3.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-react": "^7.10.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "postcss-aspect-ratio-mini": "0.0.2",
+    "@babel/core": "7.2.2",
+    "@babel/plugin-transform-react-jsx-source": "^7.2.0",
+    "babel-plugin-import": "^1.11.0",
+    "caniuse-lite": "^1.0.30000942",
+    "cssnano": "^4.1.10",
+    "cssnano-preset-advanced": "^4.0.7",
+    "customize-cra": "^0.2.12",
+    "eslint": "5.12.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "node-sass": "^4.11.0",
+    "postcss-aspect-ratio-mini": "^1.0.1",
     "postcss-cssnext": "^3.1.0",
-    "postcss-px-to-viewport": "0.0.3",
-    "postcss-viewport-units": "^0.1.3",
+    "postcss-px-to-viewport": "^1.1.0",
+    "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
-    "react-app-rewire-hot-loader": "^1.0.1",
-    "react-app-rewire-mobx": "^1.0.8",
-    "react-app-rewired": "^1.5.2",
-    "react-hot-loader": "^4.3.4",
-    "react-scripts": "1.1.4",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
-  }
+    "react-app-rewired": "^2.1.0",
+    "react-hot-loader": "^4.7.2",
+    "react-scripts": "2.1.8"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
